clang/test/BSC/Negative/Method/Union/union_redefinition_member/union_redefinition_member.cbs
// RUN: %clang_cc1 -verify %s

union SimpleUnion {
  float uf; // expected-note {{previous definition is here}}
  int ui;
  char uc;
};

int union SimpleUnion::uf(union SimpleUnion * this) { // expected-error {{redefinition of 'uf' as different kind of symbol}}
  return this->ui;
}

